@@ -76,6 +76,8 @@ Additions:
        ECORE_X_ATOM_E_ILLUME_ACCESS_ACTION_BACK
        ECORE_X_ATOM_E_ILLUME_ACCESS_ACTION_SCROLL
        ECORE_X_ATOM_E_ILLUME_ACCESS_ACTION_MOUSE
+       ECORE_X_ATOM_E_ILLUME_ACCESS_ACTION_ENABLE
+       ECORE_X_ATOM_E_ILLUME_ACCESS_ACTION_DISABLE
     * Ecore_Wayland:
      - Store global wayland interfaces in a globals list so wayland programs
        can bind to other non-standard wayland protocol extensions.
